--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,15 @@ dependencies = [
     "matplotlib>=3.10.8",
     "transformers>=5.2.0",
 ]
+
+[tool.ruff]
+line-length = 100
+target-version = "py313"
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "I", "UP"]
+fixable = ["ALL"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
